[project]
name = "ruff-mcp"
version = "1.0.0"
description = "MCP Server for Ruff Python linter and formatter"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ruff-mcp = "ruff_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruff_mcp"]